# GrowTrialLab

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyrightconfig.json
backend/: Dockerfile  manage.py  pyproject.toml  pytest.ini
backend/api/: baseline.py  baseline_grade.py  baseline_views.py  cloudflare_access.py  cockpit_views.py  contracts.py  feeding_views.py  groups.py  groups_views.py  middleware.py  models.py  overview_views.py  pagination.py  permissions.py  placement_views.py  plant_ids.py  plants_views.py  recipes_views.py  rotation_views.py  schedule_views.py  schedules.py  serializers.py  setup_packets.py  signals.py  status_summary.py  status_views.py  tent_restrictions.py  tents_views.py  test_middleware.py  tests.py  tray_assignment.py  tray_placement.py  urls.py  views.py  viewsets.py
backend/api/migrations/: 0001_initial.py  0002_experiment_species_block_batchlot_plant_adverseevent_and_more.py  0003_experimentsetupstate.py  0004_remove_plant_unique_plant_id_in_experiment_and_more.py  0005_metrictemplate.py  0006_remove_plant_unique_plant_id_in_experiment_and_more.py  0007_experiment_lifecycle_state_experiment_started_at_and_more.py  0008_tray_block_trayplant_unique_plant_single_tray.py  (+6 more)
backend/growtriallab/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
backend/tests/: conftest.py  test_baseline_grade_roundtrip.py  test_baseline_v2.py  test_contract_envelopes.py  test_lifecycle.py  test_location_payloads.py  test_recipe_assignment.py  test_schedule_plan.py  test_slots_generate.py
(+232 files in other folders)
